// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots TitleBar component Renders a Title Bar with a claim only 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "backgroundImage": "linear-gradient(90deg, #006298, #0085AD)",
          "maxWidth": "1024px",
        }
      }
    >
      <div>
        <ul>
          <li
            className="title"
          >
            <span>
              Claim 1
            </span>
          </li>
          <li
            className="desc"
          >
            <span>
              Students can read closely and analytically to comprehend a range of increasingly complex literary and informational texts.
            </span>
          </li>
          <li
            className="download"
          >
            <a
              aria-label="Download"
              download="test-file-name"
              href="test/url"
            >
              <svg
                fill="none"
                height="24"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
                />
                <polyline
                  points="7 10 12 15 17 10"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="15"
                  y2="3"
                />
              </svg>
              <style
                jsx={true}
              >
                
      * {
        margin: 0;
        padding: 0;
      }
      a {
        color: #ebebeb;
      }
      a:hover {
        color: #63666A;
      }
    
              </style>
            </a>
          </li>
        </ul>
        <style
          jsx={true}
        >
          
      * {
        margin: 0;
        padding: 0;
      }
      div {
        // min-height: 100px;
        display: flex;
        font-family: PT Sans Caption;
        justify-content: center;
        padding: 20px 0;
      }
      div ul {
        display: flex;
        flex-wrap: wrap;
        align-items: stretch;
        list-style-type: none;
        max-width: 85%;
      }
      div ul li {
        min-height: 30px;
      }
      .title {
        width: 20%;
        min-width: 50px;
        color: white;
        font-size: 20px;
        font-weight: 800;
        text-align: left;
      }
      .desc {
        width: 75%;
        min-width: 50px;
        padding-bottom: 15px;
        color: #ebebeb;
        font-size: 14px;
        font-weight: 100;
        text-align: left;
      }
      .download {
        margin-left: auto;
        margin-top: auto;
      }
    
        </style>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TitleBar component Renders a Title Bar with all data 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "backgroundImage": "linear-gradient(90deg, #006298, #0085AD)",
          "maxWidth": "1024px",
        }
      }
    >
      <div>
        <ul>
          <li
            className="title"
          >
            <span>
              Claim 1
            </span>
          </li>
          <li
            className="desc"
          >
            <span>
              Students can read closely and analytically to comprehend a range of increasingly complex literary and informational texts.
            </span>
          </li>
          <li
            className="title"
          >
            <span>
              Target 1
            </span>
          </li>
          <li
            className="desc"
          >
            <span>
              Given an inference or conclusion, use explicit details and implicit information from the text to support the inference or conclusion provided.
            </span>
          </li>
          <li
            className="download"
          >
            <a
              aria-label="Download"
              download="test-file-name"
              href="test/url"
            >
              <svg
                fill="none"
                height="24"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
                />
                <polyline
                  points="7 10 12 15 17 10"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="15"
                  y2="3"
                />
              </svg>
              <style
                jsx={true}
              >
                
      * {
        margin: 0;
        padding: 0;
      }
      a {
        color: #ebebeb;
      }
      a:hover {
        color: #63666A;
      }
    
              </style>
            </a>
          </li>
        </ul>
        <style
          jsx={true}
        >
          
      * {
        margin: 0;
        padding: 0;
      }
      div {
        // min-height: 100px;
        display: flex;
        font-family: PT Sans Caption;
        justify-content: center;
        padding: 20px 0;
      }
      div ul {
        display: flex;
        flex-wrap: wrap;
        align-items: stretch;
        list-style-type: none;
        max-width: 85%;
      }
      div ul li {
        min-height: 30px;
      }
      .title {
        width: 20%;
        min-width: 50px;
        color: white;
        font-size: 20px;
        font-weight: 800;
        text-align: left;
      }
      .desc {
        width: 75%;
        min-width: 50px;
        padding-bottom: 15px;
        color: #ebebeb;
        font-size: 14px;
        font-weight: 100;
        text-align: left;
      }
      .download {
        margin-left: auto;
        margin-top: auto;
      }
    
        </style>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TitleBar component Renders a download button 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "backgroundImage": "linear-gradient(90deg, #006298, #0085AD)",
          "maxWidth": "1024px",
        }
      }
    >
      <a
        aria-label="Download"
        download="test-file-name"
        href="test/url"
      >
        <svg
          fill="none"
          height="24"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
          />
          <polyline
            points="7 10 12 15 17 10"
          />
          <line
            x1="12"
            x2="12"
            y1="15"
            y2="3"
          />
        </svg>
        <style
          jsx={true}
        >
          
      * {
        margin: 0;
        padding: 0;
      }
      a {
        color: #ebebeb;
      }
      a:hover {
        color: #63666A;
      }
    
        </style>
      </a>
    </div>
  </div>
</div>
`;
